--- a/DetectionEngine/DetectionEngine.csproj
+++ b/DetectionEngine/DetectionEngine.csproj
@@ -44,7 +44,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ContourDetector.cs" />
+    <Compile Include="LettersDetector.cs" />
     <Compile Include="Engine.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
