--- a/DetectionEngine/DetectionEngine.csproj
+++ b/DetectionEngine/DetectionEngine.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EDetector.cs" />
     <Compile Include="LettersDetector.cs" />
     <Compile Include="Engine.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
