--- a/UnitTests/UnitTests.csproj
+++ b/UnitTests/UnitTests.csproj
@@ -81,13 +81,25 @@
     <Compile Include="DetectionTests.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\DatabaseLayer\DatabaseLayer.csproj">
+      <Project>{dbaee465-3ab7-4842-87c5-b055ced975b8}</Project>
+      <Name>DatabaseLayer</Name>
+    </ProjectReference>
     <ProjectReference Include="..\DetectionEngine\DetectionEngine.csproj">
       <Project>{d7b8ce46-b349-4bce-95f6-2e4f9d89717d}</Project>
       <Name>DetectionEngine</Name>
     </ProjectReference>
+    <ProjectReference Include="..\ECodeRecognizer\ECodeRecognizer.csproj">
+      <Project>{d84c31ea-bd1c-4e83-ae3b-7c991529de23}</Project>
+      <Name>ECodeRecognizer</Name>
+    </ProjectReference>
     <ProjectReference Include="..\PreparationEngine\PreparationEngine.csproj">
       <Project>{e03a9a1e-a434-4da9-8a04-cac2349f15f9}</Project>
       <Name>PreparationEngine</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\RecognitionEngine\RecognitionEngine.csproj">
+      <Project>{f3358ec7-2383-43bf-a905-a0eaa576d5b2}</Project>
+      <Name>RecognitionEngine</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
