--- a/RecognitionEngine/packages.config
+++ b/RecognitionEngine/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="NeuralNetworks" version="1.0.3" targetFramework="net45" />
   <package id="OpenCvSharp-AnyCPU" version="2.4.10.20160316" targetFramework="net45" />
 </packages>
