--- a/RecognitionEngine/RecognitionEngine.csproj
+++ b/RecognitionEngine/RecognitionEngine.csproj
@@ -46,10 +46,15 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataConverter.cs" />
     <Compile Include="Engine.cs" />
+    <Compile Include="NeuralNetworkController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Teacher.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DatabaseLayer\DatabaseLayer.csproj">
