minor changes in network

--- a/UnitTests/UnitTests.csproj
+++ b/UnitTests/UnitTests.csproj
@@ -79,6 +79,7 @@
     <Compile Include="PreparationTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DetectionTests.cs" />
+    <Compile Include="RecognitionTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DatabaseLayer\DatabaseLayer.csproj">
