--- a/RecognitionEngine/packages.config
+++ b/RecognitionEngine/packages.config
@@ -1,5 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AForge" version="2.2.5" targetFramework="net45" />
+  <package id="AForge.Genetic" version="2.2.5" targetFramework="net45" />
+  <package id="AForge.Math" version="2.2.5" targetFramework="net45" />
+  <package id="AForge.Neuro" version="2.2.5" targetFramework="net45" />
   <package id="NeuralNetworks" version="1.0.3" targetFramework="net45" />
   <package id="OpenCvSharp-AnyCPU" version="2.4.10.20160316" targetFramework="net45" />
 </packages>
