--- a/RecognitionEngine/RecognitionEngine.csproj
+++ b/RecognitionEngine/RecognitionEngine.csproj
@@ -64,11 +64,14 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Xml" />
+    <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Brain.cs" />
     <Compile Include="DataConverter.cs" />
     <Compile Include="Engine.cs" />
-    <Compile Include="NeuralNetworkController.cs" />
+    <Compile Include="RecognitionController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Teacher.cs" />
   </ItemGroup>
